# ReZero

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/pers/dongzhong/rezero/example/: MainActivity.java
example/android/app/src/main/res/layout/: activity_main.xml
example/android/app/src/main/res/values/: strings.xml  themes.xml
example/android/app/src/main/res/values-night/: themes.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/: AppDelegate.h  AppDelegate.m  Main.storyboard  ViewController.h  ViewController.m  main.m
rezero/: CMakeLists.txt  version.cc  version.h
rezero/base/: CMakeLists.txt  build_config.h  closure.h  delayed_task.cc  delayed_task.h  eintr_wrapper.h  log_level.h  log_settings.cc  log_settings.h  log_settings_state.cc  logging.cc  logging.h  macros.h  message_loop.cc  message_loop.h  message_loop_impl.cc  message_loop_impl.h  size.h  task_runner.cc  task_runner.h  task_runners.cc  task_runners.h  thread.cc  thread.h  thread_local.cc  thread_local.h  thread_singleton.h  unique_fd.cc  unique_fd.h  unique_object.h  waitable_event.cc  waitable_event.h
rezero/base/android/: jni_util.cc  jni_util.h  jni_weak_ref.cc  jni_weak_ref.h  message_loop_android.cc  message_loop_android.h  scoped_java_ref.cc  scoped_java_ref.h  timer_fd.cc  timer_fd.h
rezero/base/ios/: cf_utils.h  message_loop_ios.h  message_loop_ios.mm  scoped_block.h  scoped_nsobject.h
rezero/base/time/: time_delta.h  time_point.cc  time_point.h
rezero/gpu/: CMakeLists.txt  buffer.cc  buffer.h  command_buffer.h  context.cc  context.h  defines.h  depth_stencil_state.cc  depth_stencil_state.h  device.cc  device.h  enums.h  program.cc  program.h  program_state.cc  program_state.h  render_pass.h  render_pass_descriptor.cc  render_pass_descriptor.h  render_pipeline.h  shader.cc  shader.h  swap_chain.cc  swap_chain.h  texture.cc  texture.h  types.cc  types.h  vertex_layout.cc  vertex_layout.h
rezero/gpu/opengl/: buffer.cc  buffer_gl.cc  buffer_gl.h  command_buffer.cc  context_eagl.h  context_eagl.mm  context_egl.cc  context_egl.h  device_gl.cc  device_gl.h  includes.h  includes_gl.h  program.cc  program_gl.cc  program_gl.h  render_pass.cc  render_pipeline.cc  shader.cc  shader_gl.cc  shader_gl.h  state_machine_gl.cc  state_machine_gl.h  swap_chain_eagl.h  swap_chain_eagl.mm  swap_chain_egl.cc  swap_chain_egl.h  texture.cc  texture_gl.cc  texture_gl.h  utils.cc  utils.h  utils_gl.cc  utils_gl.h
rezero/gpu/opengl/traits/: trait_buffer.h  trait_command_buffer.h  trait_program.h  trait_render_pass.h  trait_render_pipeline.h  trait_shader.h  trait_texture.h
rezero/reflection/: CMakeLists.txt  includes.h  reflection_manager.cc  reflection_manager.h  reflection_manager_impl.h
rezero/shell/: CMakeLists.txt  engine.cc  engine.h  opengl_test.cc  opengl_test.h  platform_view.cc  platform_view.h  vsync_waiter.cc  vsync_waiter.h
rezero/shell/android/: context_manager.cc  context_manager.h  context_manager_gl.cc  context_manager_gl.h  engine_android.cc  engine_android.h  jni_on_load.cc  native_window_android.cc  native_window_android.h  platform_view_android.cc  platform_view_android.h  vsync_waiter_android.cc  vsync_waiter_android.h
rezero/shell/android/surface/: native_window.cc  native_window.h
rezero/shell/ios/: context_manager.h  context_manager.mm  context_manager_gl.h  context_manager_gl.mm  engine_ios.h  engine_ios.mm  platform_view_ios.h  platform_view_ios.mm  rendering_api_selection.h  rendering_api_selection.mm  vsync_waiter_ios.h  vsync_waiter_ios.mm
